k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: k8s-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - name: backend
          image: docker.io/bhchoudev/k8s-beginners-02-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: demo-data

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: demo-backend
  ports:
    - port: 8000
      targetPort: 8000
