k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: k8s-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/bhchoudev/k8s-beginners-02-frontend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 80
