k8s/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: k8s-demo
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - k8s-demo.blackjackzone.me
      secretName: k8s-demo-tls

  rules:
    - host: k8s-demo.blackjackzone.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
